2015-05-28  Mahyar Abbaspour  <mahyar.abaspour@gmail.com>
	* src/nano.c (handle_sigwinch, regenerate_screen), src/global.c,
	src/prompt.c (do_statusbar_input, get_prompt_string, do_yesno_prompt),
	src/browser.c (do_browser, browser_refresh), src/help.c (do_help),
	src/winio.c (get_key_buffer, unget_input, get_input, parse_kbinput),
	src/text.c (do_justify, do_linter), src/nano.h, src/proto.h:
	Handle a SIGWINCH (signalling a change in window size) not when it
	happens but only when checking for input.  Report the SIGWINCH via
	a special key value to the calling routine, to allow not only the
	main editor but also the help viewer and the file browser to adapt
	their display to the new size.  (Patch edited by Benno.)

2015-05-20  Devrim Gündüz  <devrim@gunduz.org>
	* doc/syntax/postgresql.nanorc: New file -- syntax highlighting for
	PostgreSQL, first posted as Savannah patch #8601.  Trimmed by Benno.

2015-05-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_refresh): Take the distant possibility of
	terabyte files into account, and in the bargain get rid of the need
	to calculate the number of digits in UINT_MAX.
	* src/files.c (get_next_filename): Limit the number of backup files
	to one hundred thousand -- which should be far more than enough --
	before finding a unused filename takes an annoying amount of time.
	* src/utils.c (digits): Delete this now unneeded function.

2015-05-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_refresh): Display an ellipsis only when the
	filename is longer than the available space, not when it still fits.
	* src/browser.c, src/nano.c: Adjust a few comments and line wrappings.
	* doc/syntax/groff.nanorc: Use character classes correctly.

2015-04-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): Match the file regex of a syntax against
	the absolute, canonical path instead of against the path the user gave.